infra/emby/emby-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  labels:
    app: emby
  namespace: emby
spec:
  type: NodePort
  ports:
    - port: 8096
      protocol: TCP
      targetPort: 8096
      name: http
    - port: 8920
      protocol: TCP
      targetPort: 8920
      name: https
  selector:
    app: emby
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  labels:
    app: emby
  namespace: emby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      hostNetwork: true
      containers:
        - name: emby
          image: emby/embyserver:latest
          ports:
            - containerPort: 8096
            - containerPort: 8920
          volumeMounts:
            - name: emby-config
              mountPath: /config
            - name: emby-data
              mountPath: /mnt/emby-data
            - name: emby-cert
              mountPath: /mnt/emby-cert

      volumes:
        - name: emby-config
          persistentVolumeClaim:
            claimName: emby-config-claim
        - name: emby-data
          persistentVolumeClaim:
            claimName: emby-media-claim
        - name: emby-cert
          secret:
            secretName: emby-cert
            optional: true
