infra/emby/emby-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby
  namespace: emby
  annotations:
    cert-manager.io/cluster-issuer: dyrvold-dev-zerossl
spec:
  ingressClassName: public
  rules:
    - host: emby.dyrvold.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: emby
                port:
                  name: http
    - host: embys.dyrvold.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: emby
                port:
                  name: https
  tls:
    - hosts:
        - "emby.dyrvold.dev"
        - "embys.dyrvold.dev"
      secretName: emby-cert
